some requested updates to the sign up section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -498,6 +498,11 @@ cite img {
     
 }
 
+.cunningfolk {
+    text-align: center;
+    font-style: italic;
+}
+
 /*-----------------------------------------*/
 /*CONTACT FORM*/
 /*-----------------------------------------*/
