--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -182,7 +182,7 @@ header {
 
 .logo,
 .logo-black {
-    height: 100px;
+    height: 150 px;
     width: auto;
     float: left; 
     margin-top: 20px;
@@ -323,7 +323,7 @@ header {
 
 
 .section-farmers h2 {
-    padding-top: 40%;
+    padding-top: 50%;
 }
 
 .section-farmers {
@@ -354,10 +354,11 @@ header {
     padding: 3%;
 }
 
-.farm-bio {
-    margin-bottom: 50px;
-    margin-top: -30px;
-    text-align: justify;
+.flex-object {
+display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .figcaption{
