added new section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -503,6 +503,14 @@ cite img {
     font-style: italic;
 }
 
+
+/*-----------------------------------------*/
+/*Free Vegetable Fund*/
+/*-----------------------------------------*/
+.section-free-vegetable-fund{
+    text-align:center;
+}
+
 /*-----------------------------------------*/
 /*CONTACT FORM*/
 /*-----------------------------------------*/
