--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -511,10 +511,16 @@ cite img {
     text-align:center;
 }
 
+article{
+    margin-left: 20%;
+    margin-right: 20%;
+}
 /*-----------------------------------------*/
 /*CONTACT FORM*/
 /*-----------------------------------------*/
-
+.section-form{
+    background-color: #ededed;
+}
 .contact-form {
     width: 60%;
     margin: 0 auto;
