--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -21,7 +21,7 @@
         margin-left: 10%;
     }
     
-    .farm-owners { width: 80%; }
+    .farm-owners { width: 100%; }
     
     .icon-small { 
         width: 20px;
@@ -124,6 +124,13 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('img/back-customers2.jpg');}
 }
 
+.farm-owners {
+    text-align: center;
+}
+ 
+}
+
+
 
 
 /* Small Phones: from 0 to 480 px */
@@ -147,3 +154,6 @@
     
 }
 
+.farm-owners {
+    text-align: center;
+}
