--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -71,6 +71,7 @@ h2 {
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
+    padding-top: 1.5rem;
     letter-spacing: 1px; 
 }
 
