--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -164,7 +164,7 @@
     
     header {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero_alt.jpg);
-    background-size: contained;
+    background-size: auto;
     background-position: center;
     height: 100vh;
     background-attachment: fixed;
